[gd_scene load_steps=3 format=3 uid="uid://cnhpi05ymns43"]

[ext_resource type="Script" uid="uid://drfn1q0gobjn" path="res://Menus/start_menu.gd" id="1_ga2iw"]
[ext_resource type="AudioStream" uid="uid://dvrvkvpnowtx0" path="res://Assets/Musics/A l'aide.mp3" id="2_n2gf6"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ga2iw")

[node name="Menu" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -50.5
offset_right = 215.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Menu"]
layout_mode = 2
text = "Start"

[node name="Help" type="Button" parent="Menu"]
layout_mode = 2
text = "Help"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Menu/Help"]
stream = ExtResource("2_n2gf6")

[node name="Quit" type="Button" parent="Menu"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
